homepage UI changes and alignment related fix

--- a/Banqi-UI/src/app/game-play/game-play.component.css
+++ b/Banqi-UI/src/app/game-play/game-play.component.css
@@ -6,7 +6,72 @@
   border: 1px solid black;
   padding: 1px;
 }
+.red {
+  color: #FF7479;
+}
 
+.white {
+  color: #2E2B2A;
+}
+
+.banqiboard{
+  display: grid;
+  grid-template-columns: 120px 120px 120px;
+  grid-template-rows: 120px 120px 120px 20px;
+  alignment: center;
+
+}
+#banqiboard{
+width: 480px;
+background: #ccc;
+border: 25px solid #fff;
+border-radius: 10px;
+}
+
+#game {
+
+}
+.white{
+  background-color: whitesmoke;
+}
+
+.grey{
+background-color: slategrey;
+}
+html {
+  background-image: url("chess.jpg");
+
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;}
+/*
+.row {
+  clear: both;
+  overflow: hidden;
+}
+*/
+.box {
+  width: 60px;
+  height: 60px;
+  float: left;
+  text-align: center;
+  line-height: 60px;
+  font-size: 50px;
+  cursor: default;
+}
+
+
+
+body {
+  background-image: url('http://sakk-klub.hu/wp-content/uploads/2015/12/BvsC_Wallpaper01.jpg');
+  width: 580px;
+  margin: 40px auto;
+  background-image: linear-gradient(45deg, #808080 25%, transparent 25%), linear-gradient(-45deg, #808080 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #808080 75%), linear-gradient(-45deg, transparent 75%, #808080 75%);
+  background-size: 20px 20px;
+  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+}
 .red {
   color: #FF7479;
 }
